# ansible-collection-workstation

./: .env  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  Makefile  Pipfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
ansible_collections/donhector/workstation/: .ansible-lint  .yamllint  Makefile  README.md  galaxy.yml
ansible_collections/donhector/workstation/molecule/default/: converge.yml  molecule.yml
ansible_collections/donhector/workstation/playbooks/: setup.yml
ansible_collections/donhector/workstation/roles/: TODO.md
ansible_collections/donhector/workstation/roles/apt_proxy/: Makefile  README.md
ansible_collections/donhector/workstation/roles/asdf/: README.md
ansible_collections/donhector/workstation/roles/bat/: README.md
ansible_collections/donhector/workstation/roles/fd/: Makefile  README.md
ansible_collections/donhector/workstation/roles/fzf/: README.md
ansible_collections/donhector/workstation/roles/hugo/: README.md
ansible_collections/donhector/workstation/roles/packer/: Makefile  README.md
ansible_collections/donhector/workstation/roles/podman/: README.md
ansible_collections/donhector/workstation/roles/ripgrep/: Makefile
ansible_collections/donhector/workstation/roles/terraform/: README.md
ansible_collections/donhector/workstation/roles/yq/: Makefile
donhector/workstation/: .ansible-lint  .env.sample  .yamllint  Makefile  galaxy.yml
donhector/workstation/molecule/default/: converge.yml  molecule.yml
donhector/workstation/playbooks/: setup.yml  workstation.yml
donhector/workstation/roles/apt_proxy/defaults/: main.yml
donhector/workstation/roles/apt_proxy/meta/: main.yml
donhector/workstation/roles/apt_proxy/tasks/: main.yml
donhector/workstation/roles/apt_proxy/tests/: test.yml
donhector/workstation/roles/apt_proxy/vars/: main.yml
donhector/workstation/roles/awscli/: README.md
donhector/workstation/roles/bat/: README.md
donhector/workstation/roles/common/: README.md
donhector/workstation/roles/docker/: README.md
donhector/workstation/roles/fonts/: Makefile  README.md
donhector/workstation/roles/gh/: README.md
donhector/workstation/roles/jq/: README.md
donhector/workstation/roles/python/: README.md
donhector/workstation/roles/ripgrep/: README.md
donhector/workstation/roles/sudoers/: README.md
donhector/workstation/roles/yq/: .yamllint  README.md
molecule/default/: converge.yml
(+164 files in other folders)
