[tool.poetry]
name = "donhector.workstation"
version = "1.1.3"
description = "Ansible collection: donhector.workstation"
authors = ["donhector <2475379+donhector@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/donhector/ansible-collection-workstation"
repository = "https://github.com/donhector/ansible-collection-workstation"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^7.0.0"

[tool.poetry.dev-dependencies]
molecule = {extras = ["docker"], version = "^4.0.3"}
ansible-lint = "^5.4.0"
yamllint = "^1.28.0"
pre-commit = "^2.20.0"
commitizen = "^2.37.1"
gitlint = "^0.18.0"
safety = "^2.3.2"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
